# fractal

./: AGENTS.md  CLI-PROPOSITION.md  Cargo.toml  ENGINE-HARDENING-ROADMAP.md  LLM-DESIGN-BRIEF.md  README-legacy.md  README.md  custom_file_format  gemma4_wishlists.md  test.frac  wishlist.md
.github/workflows/: docs.yml  main.yml  static.yml
docs/: architecture.md  code-map.md  current-focus.md  feature-inventory.md  format-contract.md
my_test_project/: fractal.json
my_test_project/pages/: index.html
protptype/: Cargo.toml  custom_file_format
protptype/src/: lib.rs  main.rs
protptype/src/formats/: frac.rs
protptype/src/io/: serialize.rs
protptype/src/services/: mod.rs
protptype/tests/: test_utils.rs
src/: cli.rs  deserialize.rs  error.rs  errors.rs  format.rs  frac.rs  fractal.rs  grammer.rs  lib.rs  main.rs  parse_mark.rs  project.rs  serialize.rs  tests.rs  types.rs  utils.rs  validation.rs
src/document/: html.rs  metadata.rs  mod.rs  notes.rs  page.rs  page_links.rs  render.rs
src/formats/: frac.rs  mod.rs
src/graph/: links.rs  mod.rs
src/index/: mod.rs  search.rs
src/io/: deserialize.rs  fs.rs  markdown.rs  mod.rs  serialize.rs
src/ops/: editor.rs  mod.rs  mutation.rs  page.rs  summary.rs  sync.rs
src/project/: constants.rs  document.rs  editor.rs  graph.rs  html.rs  index.rs  links.rs  markdown.rs  metadata.rs  mod.rs  notes.rs  operations.rs  paths.rs  render.rs  search.rs  sync.rs  tests.rs  types.rs  validation.rs
test_proj/: fractal.json
test_proj/.fractal/: index.json
test_proj/pages/: index.html  subpage.html  test.html
test_proj/pages/folder/: subpage.html
tests/: footnotes_roundtrip.rs  format_roundtrip.rs  parse_tests.rs  span_roundtrip.rs
tests/fixtures/test_proj/: fractal.json
tests/fixtures/test_proj/.fractal/: graph.json  index.json  style.css
