
[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }       # CLI argument parsing
kuchiki = "0.8"                                         # HTML5 parsing/querying
serde = { version = "1.0", features = ["derive"] }      # Serialization
serde_json = "1.0"                                      # JSON support
