
[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true } # CLI argument parsing
kuchiki = "0.8"                                         # HTML5 parsing/querying
serde = { version = "1.0", features = ["derive"] }      # Serialization
serde_json = "1.0"                                      # JSON support

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "fractal"
path = "src/main.rs"
required-features = ["cli"]
