[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
crc32fast = "1.4.0"
clap = { version = "4.4", features = ["derive"] }       # CLI argument parsing
serde = { version = "1.0", features = ["derive"] }      # Serialization
serde_json = "1.0"                                      # JSON support
yaml-rust = "0.4.5"                                     # YAML support
chrono = "0.4"                                          # Timestamps
uuid = { version = "1.18.1", features = ["v4"] }
